--- a/front/src/components/login/login.module.css
+++ b/front/src/components/login/login.module.css
@@ -1,5 +1,69 @@
 .section {
   width: 100%;
-  height: 80vh;
-  background-color: silver;
+  height: 77vh;
+  background-color: #d9d9d9;
+  display: flex;
+}
+
+.login {
+  width: 80%;
+  margin: auto;
+}
+
+.h1 {
+  margin-bottom: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  padding: 0.5rem;
+}
+
+.item {
+  margin-bottom: 20px;
+}
+
+.icon {
+  font-size: 30px;
+  padding-top: 0;
+  margin-right: 25px;
+}
+
+.google {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  width: 100%;
+  height: 70px;
+}
+
+.google span {
+  font-size: 1.2rem;
+}
+
+.naver {
+  width: 100%;
+  height: 70px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  background-color: #2db400;
+  color: white;
+  border: none;
+}
+
+.kakao {
+  width: 100%;
+  height: 70px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  background-color: #fee500;
+  border: none;
+}
+
+.hr {
+  border: 1px solid black;
 }
