--- a/front/src/components/NavBar/NavBar.css
+++ b/front/src/components/NavBar/NavBar.css
@@ -1,3 +1,67 @@
-.link {
-  color: black;
+.Nav {
+  position: fixed;
+  top: 0;
+  width: 100%
+}
+
+.NavbarItems {
+  background: rgb(248, 249, 250);
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  position: relative;
+  z-index: 2;
+}
+
+.nav-menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 100%;
+  height: 70px;
+  top: -70px;
+  left: 0;
+  opacity: 1;
+  transition: all 1s ease;
+  z-index: 1;
+}
+
+.nav-menu.active {
+  background: #dedee7;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 100%;
+  height: 70px;
+  top: 70px;
+  left: 0;
+  opacity: 1;
+  transition: all 1s ease;
+  z-index: 1;
+}
+
+.menu-icon {
+  display: block;
+  font-size: 2.7rem;
+  position: absolute;
+  cursor: pointer;
+}
+
+.navbar-arrow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(25%, 50%);
+}
+
+.navbar-hamburger {
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translate(-25%, 50%);
+  cursor: pointer;
 }
