--- a/front/src/components/NavBar/NavBar.css
+++ b/front/src/components/NavBar/NavBar.css
@@ -5,7 +5,7 @@
 }
 
 .NavbarItems {
-  background: rgb(248, 249, 250);
+  background-color: rgb(248, 249, 250);
   height: 70px;
   display: flex;
   justify-content: center;
