--- a/front/src/components/Alarm/Alarm.css
+++ b/front/src/components/Alarm/Alarm.css
@@ -4,3 +4,24 @@
 	height: 50px;
 	border-radius: 50%;
 }
+
+.box {
+	width: 100%;
+	height: 140px;
+	border-radius: 5px;
+	border: 1px solid rgb(201, 201, 201);
+	align-items: center;
+	padding: 15px;
+	margin: 5px 0;
+	overflow: hidden;
+}
+
+.box_top {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+.box_content {
+	text-align: left;
+}
