--- a/front/src/components/profile/mdProfile.module.css
+++ b/front/src/components/profile/mdProfile.module.css
@@ -1,5 +1,6 @@
 .div1 {
   width: 100%;
+  margin-top: 90px;
 }
 
 .div2 {
@@ -19,7 +20,7 @@
 
 .section {
   width: 100%;
-  height: 63vh;
+  height: 73vh;
   display: flex;
 }
 
@@ -41,9 +42,7 @@
 
 .button {
   width: 100%;
-  height: 50px;
+  height: 48px;
   font-size: 25px;
-  border-radius: 0;
   background-color: #d9d9d9;
-  border: none;
 }
