post - vote 사진 업로드 기능 추가

--- a/front/src/components/Post/Post.css
+++ b/front/src/components/Post/Post.css
@@ -181,3 +181,27 @@
     top: -10px;
     left: 28px;
 }
+
+.img_box {
+    display: flex;
+    align-items: center;
+}
+
+.thumbnail {
+    height: 150px;
+    width: auto;
+}
+
+.imgDelete {
+    display:none;
+}
+
+.imgDelete.show {
+    display:flex;
+}
+
+.button2 {
+    width:auto;
+    height:auto;
+    background-color:rgb(185, 185, 185) ;
+}
