--- a/front/src/components/Post/Post.css
+++ b/front/src/components/Post/Post.css
@@ -69,6 +69,10 @@
     transition: max-height 0.4s ease;
 }
 
+.vote_box {
+    display: flex;
+}
+
 .vs_content {
     height: 0px;
     overflow: hidden;
