--- a/front/src/components/Post/Post.css
+++ b/front/src/components/Post/Post.css
@@ -4,8 +4,6 @@
     overflow: auto;  
 }
 
-
-
 .my_accordion {
     background-color: #ffffff;
 }
@@ -86,15 +84,15 @@
 }
 
 .ox_content {
-    height: 0px;
+    max-height: 0px;
     overflow: hidden;
-    transition: all 0.4s ease;   
+    transition: all 0.4s ease;
 }
 
 .ox_content.show {
-    height: 250px;
+    max-height: 1000px;
     border-bottom: 1px solid #eeecec;
-    transition: all 0.4s ease;
+    transition: max-height 0.4s ease;
 }
 
 .hashtag_input {
@@ -208,4 +206,33 @@
     width:auto;
     height:auto;
     background-color:rgb(185, 185, 185) ;
+}
+
+.button_group {
+    display: flex;
+    justify-content: space-around;
+}
+
+.button_vote {
+    font-size: 1.1rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 80px;
+    height: 30px;
+    padding: 0px 5px;
+    border-radius: 5px;
+    background-color: rgb(240, 240, 240);
+}
+
+.button_ox {
+    font-size: 1.1rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 80px;
+    height: 30px;
+    padding: 0px 5px;
+    border-radius: 5px;
+    background-color: rgb(240, 240, 240);
 }
