--- a/front/src/components/Post/Post.css
+++ b/front/src/components/Post/Post.css
@@ -1,7 +1,7 @@
 .textarea {
-    border-style: none; 
+    margin-top: 20px;
+    border-style: none;
     border-color: Transparent; 
-    overflow: auto;  
 }
 
 .my_accordion {
@@ -56,15 +56,17 @@
 }
 
 .vote_content {
+    display: flex;
+    flex-direction: column;
     max-height: 0px;
     overflow: hidden;
-    transition: all 0.4s ease;
+    /* transition: all 0.4s ease; */
 }
 
 .vote_content.show {
     max-height: 1000px;
     border-bottom: 1px solid #eeecec;
-    transition: max-height 0.4s ease;
+    /* transition: max-height 0.4s ease; */
 }
 
 .vote_box {
@@ -72,27 +74,29 @@
 }
 
 .vs_content {
-    height: 0px;
+    display: flex;
+    flex-direction: column;
+    max-height: 0px;
     overflow: hidden;
-    transition: all 0.4s ease;   
+    /* transition: all 0.4s ease;    */
 }
 
 .vs_content.show {
-    height: 250px;
+    height: 1000px;
     border-bottom: 1px solid #eeecec;
-    transition: all 0.4s ease;
+    /* transition: all 0.4s ease; */
 }
 
 .ox_content {
     max-height: 0px;
     overflow: hidden;
-    transition: all 0.4s ease;
+    /* transition: all 0.4s ease; */
 }
 
 .ox_content.show {
     max-height: 1000px;
     border-bottom: 1px solid #eeecec;
-    transition: max-height 0.4s ease;
+    /* transition: max-height 0.4s ease; */
 }
 
 .hashtag_input {
@@ -218,7 +222,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 80px;
+    width: 33%;
     height: 30px;
     padding: 0px 5px;
     border-radius: 5px;
@@ -230,7 +234,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 80px;
+    width: 33%;
     height: 30px;
     padding: 0px 5px;
     border-radius: 5px;
