--- a/front/src/components/profile/newProfile.module.css
+++ b/front/src/components/profile/newProfile.module.css
@@ -1,4 +1,5 @@
 .section {
+  margin-top: 100px;
   width: 100%;
   height: 70vh;
   display: flex;
@@ -43,4 +44,18 @@
   border-radius: 0;
   background-color: #d9d9d9;
   border: none;
+}
+
+.profilBody {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.profileUpload {
+  border: 1px solid black;
+  width: 200px;
+  height: 200px;
+  display: inline-block;
+  border-radius: 50%;
+  margin-bottom: 20px;
 }
