--- a/front/src/components/Feed/components/FeedItem.css
+++ b/front/src/components/Feed/components/FeedItem.css
@@ -42,3 +42,25 @@
 .edit_drop.active {
     visibility: visible;
 }
+
+.detail_modal {
+    height: 0;
+    width: 100%;
+    overflow: hidden;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    left: 0;
+    top: 0;
+    text-align: center;
+    background-color: white;
+    z-index: 1000;
+    /* transition: all ease 0.25s; */
+    visibility: hidden;
+}
+
+.detail_modal.active {
+    visibility: visible;
+    height: 100%;
+    /* transition: all ease 0.25s; */
+}
