--- a/front/src/components/Feed/components/DetailContent.css
+++ b/front/src/components/Feed/components/DetailContent.css
@@ -41,5 +41,58 @@
     padding: 5px;
     border-radius: 3px;
     margin-top: 50px;
+    margin-bottom: 20px;
     cursor: pointer;
 }
+
+.detail_vs {
+    background-color: #F0F0F0;
+    margin: 10px 0;
+    min-height: 80px;
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0 15px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.detail_vs.active {
+    background-color: #c2c2c2;
+}
+
+.my_check {
+    position: absolute;
+    color: green;
+    top: 0;
+    left: 0;
+
+}
+
+.ox_container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    
+}
+
+.detail_ox {
+    width: 50%;
+    min-height: 100px;
+    background-color: #F0F0F0;
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    margin: 3px;
+    border-radius: 5px;
+}
+
+.detail_ox.active {
+    background-color: #c2c2c2;
+}
+
