--- a/front/src/components/login/login.module.css
+++ b/front/src/components/login/login.module.css
@@ -1,13 +1,13 @@
 .section {
   width: 100%;
   height: 77vh;
-  background-color: #d9d9d9;
+  background-color: #4F9DDF;
   display: flex;
 }
 
 .login {
   width: 80%;
-  margin: auto;
+  margin: 25px auto 25px auto;
 }
 
 .h1 {
@@ -36,34 +36,43 @@
 
 .google {
   width: 100%;
-  height: 70px;
+  height: 60px;
+  margin-top: 20px;
   font-size: 1.2rem;
   cursor: pointer;
   border: none;
   box-shadow: 2px 2px 2px 2px gray;
+  border-radius: 10px;
 }
 
 .naver {
   width: 100%;
-  height: 70px;
+  height: 60px;
   font-size: 1.2rem;
   cursor: pointer;
   background-color: #2db400;
   color: white;
   border: none;
   box-shadow: 2px 2px 2px 2px gray;
+  border-radius: 10px;
 }
 
 .kakao {
   width: 100%;
-  height: 70px;
+  height: 60px;
   font-size: 1.2rem;
   cursor: pointer;
   background-color: #fee500;
   border: none;
   box-shadow: 2px 2px 2px 2px gray;
+  border-radius: 10px;
 }
 
 .hr {
   border: 1px solid black;
+}
+
+.loginWord {
+  text-align: center;
+  font-weight: bold;
 }
