--- a/front/src/components/Feed/components/DetailContent.css
+++ b/front/src/components/Feed/components/DetailContent.css
@@ -7,6 +7,13 @@
     word-break: break-all;
 }
 
+.detail_box {
+    height: 100%;
+    background-color: #4F9DDF;
+    overflow: scroll;
+    padding-top: 10px
+}
+
 .detail_content {
     height: 100%;
 }
