--- a/front/src/components/NavBar/NavBar.css
+++ b/front/src/components/NavBar/NavBar.css
@@ -6,7 +6,7 @@
 }
 
 .NavbarItems {
-  background-color: rgb(248, 249, 250);
+  background: linear-gradient(90deg, rgb(110, 94, 254) 0%, rgba(73, 63, 252, 1) 100%);
   height: 70px;
   display: flex;
   justify-content: center;
@@ -31,7 +31,7 @@
 }
 
 .nav-menu.active {
-  background: #dedee7;
+  background: #6668f4;
   display: flex;
   justify-content: center;
   align-items: center;
