--- a/front/src/components/Feed/components/DetailContent.css
+++ b/front/src/components/Feed/components/DetailContent.css
@@ -52,6 +52,17 @@
     cursor: pointer;
 }
 
+.detail_close_button {
+    background-color: #9b9b9b;
+    color: white;
+    font-weight: bold;
+    padding: 5px;
+    border-radius: 3px;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+
 .detail_vs {
     background-color: #F0F0F0;
     margin: 10px 0;
