--- a/front/src/components/Feed/components/FeedItem.css
+++ b/front/src/components/Feed/components/FeedItem.css
@@ -24,7 +24,7 @@
     left: 0;
     bottom: 0;
     text-align: center;
-    background-color: white;
+    background-color: rgb(34, 32, 32);
     z-index: 1000;
     transition: all ease 0.25s;
     visibility: hidden;
