--- a/front/src/components/profile/mdProfile.module.css
+++ b/front/src/components/profile/mdProfile.module.css
@@ -40,11 +40,22 @@
   margin-bottom: 30px;
 }
 
-.button {
+.button1 {
   width: 100%;
-  height: 48px;
-  font-size: 25px;
+  height: 50px;
+  font-size: 21px;
+  border-radius: 0;
+  background: linear-gradient(90deg, rgb(137, 124, 255) 0%, rgb(93, 85, 255) 100%);
+  border: none;
+}
+
+.button2 {
+  width: 100%;
+  height: 50px;
+  font-size: 21px;
+  border-radius: 0;
   background-color: #d9d9d9;
+  border: none;
 }
 
 .image_upload {
