--- a/front/src/components/profile/newProfile.module.css
+++ b/front/src/components/profile/newProfile.module.css
@@ -6,7 +6,7 @@
 }
 
 .body {
-  width: 55%;
+  width: 72%;
   margin: auto;
 }
 
@@ -37,14 +37,24 @@
   border: 1px solid silver;
 }
 
-.button {
+.button1 {
   width: 100%;
   height: 50px;
-  font-size: 25px;
+  font-size: 21px;
+  border-radius: 0;
+  background: linear-gradient(90deg, rgb(137, 124, 255) 0%, rgb(93, 85, 255) 100%);
+  border: none;
+}
+
+.button2 {
+  width: 100%;
+  height: 50px;
+  font-size: 21px;
   border-radius: 0;
   background-color: #d9d9d9;
   border: none;
 }
+
 
 .profilBody {
   text-align: center;
@@ -52,7 +62,7 @@
 }
 
 .profileUpload {
-  border: 1px solid black;
+  border: 1px solid rgb(180, 180, 180);
   width: 200px;
   height: 200px;
   display: inline-block;
