--- a/front/src/components/profile/profile.module.css
+++ b/front/src/components/profile/profile.module.css
@@ -63,8 +63,20 @@
 
 .button {
   width: 100%;
-  height: 80%;
-  border-radius: 0;
+  height: 100%;
+  border-radius: 10px;
+  border: white;
+  color: white;
+  background: linear-gradient(90deg, rgb(137, 124, 255) 0%, rgb(93, 85, 255) 100%);
+}
+
+.button2 {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  border: white;
+  color: white;
+  background: rgb(92, 99, 106)
 }
 
 .title1 {
