--- a/front/src/components/Feed/components/FeedItem.css
+++ b/front/src/components/Feed/components/FeedItem.css
@@ -7,7 +7,7 @@
     width: 80px;
     padding: 8px;
     border-radius: 5%;
-    z-index: 1000
+    z-index: 998;
 }
 
 .feed_drop.active {
@@ -100,4 +100,20 @@
     width: 80px;
     margin: auto;
     border-radius: 5px;
+}
+
+.date_line {
+    text-align: "center";
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    margin-right: "6px";
+    display: flex;
+}
+
+.postButton {
+    position: "fixed";
+    bottom: 10px;
+    right: 10px;
+    z-index: 1000;
 }
