--- a/front/src/components/profile/profile.module.css
+++ b/front/src/components/profile/profile.module.css
@@ -31,13 +31,11 @@
 
 .box1 {
   width: 100%;
-  height: 20%;
-  margin-bottom: 100px;
+  margin-bottom: 10px;
 }
 
 .box2 {
   width: 100%;
-  height: 10%;
   margin-bottom: 10px;
 }
 
@@ -66,17 +64,15 @@
   height: 100%;
   border-radius: 10px;
   border: white;
-  color: white;
   background: linear-gradient(90deg, rgb(137, 124, 255) 0%, rgb(93, 85, 255) 100%);
 }
 
-.button2 {
+.button3 {
   width: 100%;
   height: 100%;
   border-radius: 10px;
   border: white;
-  color: white;
-  background: rgb(92, 99, 106)
+  background-color: rgb(92, 99, 106)
 }
 
 .title1 {
